@@ -115,6 +115,15 @@ public final class OTFVisFrame extends JFrame {
 		buildMenu(saver);
 		log.info("created HostControlBar");
 		log.info("created drawer");
+
+		log.warn("under win, the following tends to fail with com.jogamp.opengl.GLException: ");
+		log.warn("Unable to determine GraphicsConfiguration: WindowsWGLGraphicsConfiguration ...");
+		log.warn("It then seems to help to add the following to the Java VM options: ");
+		log.warn("--add-exports java.base/java.lang=ALL-UNNAMED");
+		log.warn("--add-exports java.desktop/sun.awt=ALL-UNNAMED");
+		log.warn("--add-exports java.desktop/sun.java2d=ALL-UNNAMED");
+		log.warn("See https://github.com/matsim-org/matsim-libs/pull/2940 and/or https://jogamp.org/bugzilla/show_bug.cgi?id=1317#c21 .");
+
 		getContentPane().add(compositePanel, BorderLayout.CENTER);
 	}
 
